tests/algorithms/x/PHP/divide_and_conquer/heaps_algorithm_iterative.out
Fatal error: Uncaught Error: heaps(): Argument #1 ($arr) could not be passed by reference in /workspace/mochi/tests/algorithms/x/PHP/divide_and_conquer/heaps_algorithm_iterative.php:68
Stack trace:
#0 {main}
  thrown in /workspace/mochi/tests/algorithms/x/PHP/divide_and_conquer/heaps_algorithm_iterative.php on line 68